fix z-index for main

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,7 +4,7 @@ main {
   align-items: center;
   position: relative;
   flex-grow: 1;
-  z-index: 2;
+  z-index: 1;
 }
 
 .card-grid {
